--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -56,6 +56,10 @@ h1 , h2 , h3, h4 , h5 , h6{
     width:100%;
 }
 
+.width-75{
+    width:75%;
+}
+
 .app-mt-1{
     margin-top:10px;
 }
@@ -82,6 +86,11 @@ h1 , h2 , h3, h4 , h5 , h6{
     display:flex;
 }
 
+.app-flex-column{
+    display:flex;
+    flex-direction:column;
+}
+
 .app-flex-between-row{
     justify-content:space-between;
 }
@@ -99,6 +108,11 @@ h1 , h2 , h3, h4 , h5 , h6{
 .app-md-spacing{
     gap:1em;
 }
+
+.app-lg-spacing{
+    gap:2em;
+}
+
 
 .maz-collapse > button{
     width:100%!important;
